--- a/src/globalStyles/global.css
+++ b/src/globalStyles/global.css
@@ -1,10 +1,12 @@
+html,
 body {
-  position: relative;
+  /* position: relative; */
   min-height: 100vh;
+  margin: 0;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 main {
   padding-bottom: 100px;
-  display: flex;
-  justify-content: center;
 }
