--- a/src/globalStyles/global.css
+++ b/src/globalStyles/global.css
@@ -10,3 +10,10 @@ body {
 main {
   padding-bottom: 100px;
 }
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+  outline: none;
+  box-shadow: none;
+}
