--- a/src/globalStyles/global.css
+++ b/src/globalStyles/global.css
@@ -6,8 +6,6 @@ body {
   height: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth;
-  position: relative;
-
 }
 
 b {
@@ -16,6 +14,11 @@ b {
 
 main {
   padding-bottom: 100px;
+  position: relative;
+}
+
+#___gatsby {
+  position: relative;
 }
 
 .navbar-toggler:focus,
